--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ a {
     color: var(--blue);
     text-decoration: none;
 }
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, p {
   color: var(--greyblue);
   margin: 0;
 }
